name:                streaming-process
version:             0.1.0
synopsis:            Streaming support for running system process
-- description:
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Data, Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Process
  build-depends:       base >=4.9 && <4.10
                     , lifted-async
                     , bytestring
                     , exceptions
                     , monad-control
                     , process
                     , streaming
                     , streaming-bytestring
                     , streaming-commons
                     , transformers
                     , transformers-base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite simple-processes
  type:                exitcode-stdio-1.0
  main-is:             simple.hs
  other-modules:       Paths_streaming_process
  build-depends:       streaming-process
                     , base
                     , bytestring
                     , hspec == 2.4.*
                     , mmorph
                     , QuickCheck == 2.*
                     , quickcheck-instances
                     , streaming
                     , streaming-bytestring
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
